--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: docker-node
-          environment_name: Docker-node-env
+          application_name: docker-react
+          environment_name: docker-react-env
           version_label: ${{ github.sha }}
           existing_bucket_name: elasticbeanstalk-us-west-2-347630426518
           region: us-west-2
